fix: navbar button spacing

--- a/src/components/Modal/CartModal/cartmodal.module.sass
+++ b/src/components/Modal/CartModal/cartmodal.module.sass
@@ -13,6 +13,8 @@
     align-items: center
 
     .cartTitle
+        place-self: flex-start
+        margin-left: 16px
         font-weight: 700
         font-size: 16px
         font-family: 'Kumbh Sans', sans-serif
