--- a/src/components/NavBar/navbar.module.sass
+++ b/src/components/NavBar/navbar.module.sass
@@ -10,8 +10,8 @@
         display: flex
         align-items: center
 
-        .logo
-            margin-inline: 32px
+        .buttonBox
+            margin-inline: 8px
 
     .rightBox
         display: flex
